--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Where freelancers meet opportunities and clients find talent. 
+      Your community's hub for all contract work. 
+      Engage today and enrich your local connections."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link
@@ -30,7 +32,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Lancelot</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
